--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
+<%= form_for @user do |f| %>
+	<% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this band from being saved:</h2>
 
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
@@ -10,28 +10,29 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+	<p>
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
+  </p>
+  <p>
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
+  </p>
+  <p>
+    <%= f.label :email, "Email Address" %><br />
     <%= f.text_field :email %>
-  </div>
-  <div class="field">
+  </p>
+  <p>
+    <%= f.label :password %><br />
+    <%= f.password_field :password %>
+  </p>
+  <p>
+    <%= f.label :password_confirmation, "Confirm Password" %><br />
+    <%= f.password_field :password_confirmation %>
+  </p>
+	<p>
     <%= f.label :role %><br />
-    <%= f.text_field :role %>
-  </div>
-  <div class="field">
-    <%= f.label :password_digest %><br />
-    <%= f.text_field :password_digest %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.select :role, User::ROLES, :prompt => "Select ..." %>
+  </p>
+  <p><%= f.submit (@user.new_record? ? "Sign up" : "Update") %></p>
 <% end %>
