--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New user</h1>
+<h3>Sign up</h3>
+
+<p>Already have an account? <%= link_to "Log in", login_path %>.</p>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
