adding articles working

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,12 +11,8 @@
     </div>
   <% end %>
 	<p>
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </p>
-  <p>
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
+    <%= f.label :user_name %><br />
+    <%= f.text_field :user_name %>
   </p>
   <p>
     <%= f.label :email, "Email Address" %><br />
