--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -12,13 +12,13 @@ body {
 }
 
 .well {
-	line-height: 1.5;
 	background-color: #E8FFFF;
+	# line-height: 1;
 }
 
 .well li {
 	font-size: 130%;
-	line-height: 1.5;
+	line-height: 1.=;
 }
 
 .table th.centered, .table td.centered {
@@ -60,8 +60,9 @@ select.date { width: 90px; }
 }
 
 .table-striped tbody tr:nth-child(2n+1) td, .table-striped tbody tr:nth-child(2n+1) th {
-	background-color: #EEEEEE;
+	background-color: #E8FFFF;
 }
+
 
 
 #copy {
