--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="well">
+        <%= link_to "Home", articles_path %> | 
+	    <%= link_to "submit", new_article_path %>
+        	
+		<% if logged_in? %>
+			<p class="ident pull-right">
+				Welcome, <%= current_user.user_name %> | <%= link_to "Logout", logout_path %>
+			</p>
+		<% else %>
+			<%= link_to 'Login', login_path %>
+		<% end %>
+	</div>
+	<p id="notice"><%= notice %></p>
+	<%= yield %>
 </body>
 </html>
