--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>First name</th>
     <th>Last name</th>
-    <th>Email</th>
+    <th>Username</th>
     <th>Role</th>
     <th>Password digest</th>
     <th></th>
@@ -16,7 +16,7 @@
   <tr>
     <td><%= user.first_name %></td>
     <td><%= user.last_name %></td>
-    <td><%= user.email %></td>
+    <td><%= user.username %></td>
     <td><%= user.role %></td>
     <td><%= user.password_digest %></td>
     <td><%= link_to 'Show', user %></td>
