--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,12 +11,9 @@
     </div>
   <% end %>
 	<p>
-    <%= f.label :user_name %><br />
-    <%= f.text_field :user_name %>
-  </p>
-  <p>
-    <%= f.label :email, "Email Address" %><br />
-    <%= f.text_field :email %>
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
+  
   </p>
   <p>
     <%= f.label :password %><br />
