--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= simple_form_for @user do |f| %>
 	<% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this band from being saved:</h2>
@@ -11,21 +11,9 @@
     </div>
   <% end %>
 	<p>
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  
-  </p>
-  <p>
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation, "Confirm Password" %><br />
-    <%= f.password_field :password_confirmation %>
-  </p>
-	<p>
-    <%= f.label :role %><br />
-    <%= f.select :role, User::ROLES, :prompt => "Select ..." %>
-  </p>
+    <%= f.input :username %><br />
+    <%= f.input :password %><br />
+    <%= f.input :password_confirmation %><br />
+    <%= f.input :role, :collection => User::ROLES %><br />
   <p><%= f.submit (@user.new_record? ? "Sign up" : "Update") %></p>
 <% end %>
