--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h3>Sign up</h3>
 
-<p>Already have an account? <%= link_to "Log in", login_path %>.</p>
+<p>Already have an account? <%= link_to "Log in", login_path %>.</p><br />
 
 <%= render 'form' %>
