--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing article</h1>
 
-<%= render 'form' %>
+<%= render 'edit_form' %>
 
 <%= link_to 'Show', @article %> |
 <%= link_to 'Back', articles_path %>
