user controller updated

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>First name:</b>
-  <%= @user.first_name %>
-</p>
-
-<p>
-  <b>Last name:</b>
-  <%= @user.last_name %>
-</p>
 
 <p>
   <b>Username:</b>
@@ -16,13 +7,13 @@
 </p>
 
 <p>
-  <b>Role:</b>
-  <%= @user.role %>
+  <b>id:</b>
+  <%= @user.id %>
 </p>
 
 <p>
-  <b>Password digest:</b>
-  <%= @user.password_digest %>
+  <b>Role:</b>
+  <%= @user.role %>
 </p>
 
 
