comments work fully on articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
 			  <tr>
 			    <td><h4><%= link_to a.title, "http://" + a.link %> <%= "(" + a.link + ")" %></h4>
 				<%= a.points.to_s + " points by " %> <%= link_to a.show_user, user_path(a.get_user) %> <%=", posted " + a.created_at.strftime("%b %d, %Y") + " | " %>
-				<%= link_to "0 comments", article_path(a) %></td>
+				<%= link_to "#{a.comments.length} comments", article_path(a) %></td>
 			  </tr>
 			<% end %>
 		</tbody>
