--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,9 +24,7 @@
   <%= @article.points %>
 </p>
 
-<%= render "partials/comments_list"%><br />
-<%= render "partials/comments_form"%>
+<%= render "partials/comments_list"%>
+<%= render "partials/comments_form"%><br />
 
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
