--- a/app/views/partials/_comments_list.html.erb
+++ b/app/views/partials/_comments_list.html.erb
@@ -1,9 +1,13 @@
 <div id="comments">
 <% for comment in @comments %>
-  <div class="comment">
-    <%= comment.content %><br>	
-		by <strong><%= "Comment's User (deal with it later)" %></strong>
-	  <em>on <%= comment.created_at.strftime('%b %d, %Y at %H:%M') %></em>
-  </div>
+	<div class="span5">
+		<div class="well">
+			<div class="comment">
+				<%= comment.content %><br /><br />	
+				by <strong><%= link_to comment.show_user, user_path(comment.get_user) %></strong>
+				<em>on <%= comment.created_at.strftime('%b %d, %Y at %H:%M') %></em>
+			</div>
+		</div>
+	</div>
 <% end %>
 </div>
