--- a/app/views/partials/_comments_list.html.erb
+++ b/app/views/partials/_comments_list.html.erb
@@ -1,11 +1,11 @@
 <div id="comments">
 <% for comment in @comments %>
-	<div class="span5">
+	<div class="span6">
 		<div class="well">
 			<div class="comment">
-				<%= comment.content %><br /><br />	
+				<%= comment.content %><br />
 				by <strong><%= link_to comment.show_user, user_path(comment.get_user) %></strong>
-				<em>on <%= comment.created_at.strftime('%b %d, %Y at %H:%M') %></em>
+				<em>on <%= comment.created_at.strftime('%b %d, %Y at %H:%M') %></em><br /><br />	
 			</div>
 		</div>
 	</div>
