--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,30 +1,13 @@
-
 <p>
-  <b>Title:</b>
-  <%= @article.title %>
+  	<h4><%= link_to @article.title, "http://" + @article.link %> <%= "(" + @article.link + ")" %></h4>
+	<%= @article.points.to_s + " points by " %> <%= link_to @article.show_user, user_path(@article.get_user) %> <%=", posted " + @article.created_at.strftime("%b %d, %Y") %>
 </p>
 
 <p>
-  <b>Link:</b>
-  <%= @article.link %>
-</p>
-
-<p>
-  <b>Date added:</b>
-  <%= @article.created_at.strftime("%b %d, %Y") %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%= @article.show_user %>
-</p>
-
-<p>
-  <b>Points:</b>
-  <%= @article.points %>
-</p>
-
-<%= render "partials/comments_list"%>
-<%= render "partials/comments_form"%><br />
+	
+</p>	
+	
+<%= render "partials/comments_form"%>
+<%= render "partials/comments_list"%><br />
 
 <%= link_to 'Back', articles_path %>
