--- a/app/views/partials/_comments_form.html.erb
+++ b/app/views/partials/_comments_form.html.erb
@@ -7,10 +7,8 @@
 		    <%= f.association :user, :collection => [[current_user.username, current_user.id]], :include_blank => false %><br />
 
 
-	    <div class="form-actions">
-	      <%= f.submit nil, :class => 'btn btn-primary' %>
-	      <%= link_to 'Cancel', comments_path, :class => 'btn' %>
-	    </div>
+	      <%= f.submit "Add Comment", :class => 'btn btn-primary' %>
+
 	  </fieldset>
 	<% end %>
 <% else %>
