--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         	
 		<p class="ident pull-right">
 			<% if logged_in? %>
-				<%= current_user.username %> | <%= link_to "Logout", logout_path %>
+				<%= link_to current_user.username, user_path(current_user) %> | <%= link_to "Logout", logout_path %>
 			<% else %>
 				<%= link_to 'Login', login_path %> | <%= link_to 'Signup', new_user_path %>
 			<% end %>
