--- a/app/views/partials/_comments_list.html.erb
+++ b/app/views/partials/_comments_list.html.erb
@@ -4,7 +4,7 @@
 		<div class="well">
 			<div class="comment">
 				<%= comment.content %><br />
-				by <strong><%= link_to comment.show_user, user_path(comment.get_user) %></strong>
+				by <strong><%= link_to comment.username, user_path(comment.user) %></strong>
 				<em>on <%= comment.created_at.strftime('%b %d, %Y at %H:%M') %></em><br />	
 			</div>
 		</div>
