controllers simplified with before_filter, s_login removed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 			 | <%= link_to "welcome", welcome_path %>
 			 | <%= link_to "submit", new_article_path %>
 		<% else %>
-		 | <%= link_to "submit", s_login_path %>
+		 | <%= link_to "submit", login_path %>
 		<% end %>
 		
         	
