--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <p>
   	<h4><%= link_to @article.title, "http://" + @article.link %> <%= "(" + @article.link + ")" %></h4>
-	<%= @article.points.to_s + " points by " %> <%= link_to @article.username, user_path(@article.user) %> <%=", posted " + @article.created_at.strftime("%b %d, %Y") %>
+	<%= @article.points.to_s + " points by " %> <%= link_to @article.username, user_path(@article.user) %> <%=", posted " + @article.created_at.to_s(:mdy) %>
 </p>
 
 <p>
