--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,5 +4,7 @@ Created: <%= @user.created_at.to_s(:mdy) %><br /><br />
 
 <%= link_to "Submissions" %><br />
 <%= link_to "Comments (I'll get these two later)" %><br /><br />
-<%= link_to "Edit Information", edit_user_path, :class => 'btn' %>
+<% if can? :update, @user %>
+	<%= link_to "Edit Information", edit_user_path, :class => 'btn' %>
+<% end %>
 
