--- a/app/views/partials/_comments_list.html.erb
+++ b/app/views/partials/_comments_list.html.erb
@@ -4,7 +4,7 @@
 		<div class="well">
 			<div class="comment">
 				<strong><%= link_to comment.username, user_path(comment.user) %></strong>
-				<em>on <%= comment.created_at.to_s(:mdyt) %></em><br />
+				<em>on <%= comment.created_at.to_s(:mdyt) %> | <%= link_to "link", comment_path(comment) %></em><br />
 				<%= comment.content %><br />
 			</div>
 		</div>
