--- a/app/views/partials/_comments_form.html.erb
+++ b/app/views/partials/_comments_form.html.erb
@@ -12,5 +12,5 @@
 	  </fieldset>
 	<% end %>
 <% else %>
-	To add comments, you must <%= link_to "log in", login_path %>.<br />
+	To add comments, you must <%= link_to "log in", login_path %>.<br /><br />
 <% end %>
