--- a/app/views/partials/_comments_form.html.erb
+++ b/app/views/partials/_comments_form.html.erb
@@ -3,8 +3,7 @@
 	<h3>Add a Comment</h3>
 	<%= simple_form_for [@commentable, Comment.new], :html => { :class => 'form-horizontal' } do |f| %>
 		<fieldset>
-			<%= f.input :content %>
-		    <%= f.association :user, :collection => [[current_user.username, current_user.id]], :include_blank => false %><br />
+			<%= f.input :content %><br /><br />
 
 
 	      <%= f.submit "Add Comment", :class => 'btn btn-primary' %>
