attempting auto redirect after login, but failing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,8 @@
         <b><%= link_to "Haxxor News", articles_path %></b>
 	    <% if logged_in? %>
 			 | <%= link_to "welcome", welcome_path %>
-			 | <%= link_to "submit", new_article_path %>
-		<% else %>
-		 | <%= link_to "submit", login_path %>
 		<% end %>
+		 | <%= link_to "submit", login_path, session[:return_to] => new_article_path %>
 		
         	
 		<p class="ident pull-right">
@@ -32,7 +30,7 @@
 			<%= msg %>
 		</div>
     <% end %>
-	<div class="well">
+	<div class="well">		
 		<%= yield %>
 	</div>
 </body>
