login redirects functioning and abilities more functional/complicated/non-sensical :(

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,23 @@
-	<table class="table table-striped">
-		<thead>
-		</thead>
-		<tbody>
-			<% @articles.each do |a| %>
-			  <tr>
-			    <td><h4><%= link_to a.title, a.link %> <%= "(" + a.short_link + ")" %></h4>
-				<%= a.points.to_s + " points by " %> <%= link_to a.username, user_path(a.user) %> <%=", posted " + a.created_at.to_s(:mdy) + " | " %>
-				<%= link_to "#{a.comment_count} comments", article_path(a) %></td>
-			  </tr>
-			<% end %>
-		</tbody>
-	</table>
-	<%= will_paginate @articles %>
-	
-	<%= form_tag articles_path, :method => 'get' do %>
-		<p>
-			<%= text_field_tag :search, params[:search] %>
-			<%= submit_tag "Search", :name => nil %>
-		</p>
-	<% end %>
+<% session[:return_to] = nil %>
+<table class="table table-striped">
+	<thead>
+	</thead>
+	<tbody>
+		<% @articles.each do |a| %>
+		  <tr>
+		    <td><h4><%= link_to a.title, a.link %> <%= "(" + a.short_link + ")" %></h4>
+			<%= a.points.to_s + " points by " %> <%= link_to a.username, user_path(a.user) %> <%=", posted " + a.created_at.to_s(:mdy) + " | " %>
+			<%= link_to "#{a.comment_count} comments", article_path(a) %></td>
+		  </tr>
+		<% end %>
+	</tbody>
+</table>
+<%= will_paginate @articles %>
+
+<%= form_tag articles_path, :method => 'get' do %>
+	<p>
+		<%= text_field_tag :search, params[:search] %>
+		<%= submit_tag "Search", :name => nil %>
+	</p>
+<% end %>
 </br>
