--- a/app/views/partials/_comments_form.html.erb
+++ b/app/views/partials/_comments_form.html.erb
@@ -11,5 +11,6 @@
 	  </fieldset>
 	<% end %>
 <% else %>
+	<% session[:return_to] = request.url %>
 	To add comments, you must <%= link_to "log in", login_path %>.<br /><br />
 <% end %>
