user show page gives option to edit your own info

--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -11,11 +11,12 @@
     </div>
   <% end %>
 	<p>
-	<h3><%= "#{@user.username}: Update Information" %></h3><br /><br />
     <%= f.input :about %><br />
 	<%= f.input :email %><br />
-    <%= f.input :password %><br />
-	<%= f.input :password_confirmation %><br />
-  <p><%= f.submit (@user.new_record? ? "Sign up" : "Update"), :class => 'btn' %>
-     <%= link_to 'Cancel', articles_path, :class => 'btn' %></p>
+	<% if request.url.include?("edit") %>
+		<%= f.submit (@user.new_record? ? "Sign up" : "Update Info"), :class => 'btn' %>
+		<%= link_to 'Cancel', articles_path, :class => 'btn' %>
+	<% else %>
+		<%= f.submit (@user.new_record? ? "Sign up" : "Update Info"), :class => 'btn' %>
+	<% end %>
 <% end %>
