comment counter is now cached and updated whenever a comment is added

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,8 +6,12 @@
 		  <tr>
 		    <td><h4><%= link_to a.title, a.link %> <%= "(" + a.short_link + ")" %></h4>
 			<%= a.points.to_s + " points by " %> <%= link_to a.username, user_path(a.user) %> <%=", posted " + a.created_at.to_s(:mdy) + " | " %>
-			<%= link_to "#{a.comment_count} comments", article_path(a) %></td>
-		  </tr>
+			<% if a.comment_count == 1 %>
+				<%= link_to "1 comment", article_path(a) %></td>			
+			<% else %>
+				<%= link_to "#{a.comment_count} comments", article_path(a) %></td>
+		  	<% end %>
+		</tr>
 		<% end %>
 	</tbody>
 </table>
