--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,17 +1,22 @@
 <table class="table table-striped">
-	<thead>
-	</thead>
 	<tbody>
 		<% @articles.each do |a| %>
-		  <tr>
-		    <td><h4><%= link_to a.title, a.link %> <%= "(" + a.short_link + ")" %></h4>
-			<%= a.points.to_s + " points by " %> <%= link_to a.username, user_path(a.user) %> <%=", posted " + a.created_at.to_s(:mdy) + " | " %>
-			<% if a.comment_count == 1 %>
-				<%= link_to "1 comment", article_path(a) %></td>			
-			<% else %>
-				<%= link_to "#{a.comment_count} comments", article_path(a) %></td>
-		  	<% end %>
-		</tr>
+		  	<tr>
+		    	<td>
+				<h4>
+				<% if logged_in? %>
+					<%= button_to "^", upvote_article_path(a) %><%= button_to "v", downvote_article_path(a) %> 
+				<% end %>
+				<%= link_to a.title, a.link %> <%= "(" + a.short_link + ")" %></h4>
+				<%= a.points.to_s + " points by " %> <%= link_to a.username, user_path(a.user) %> <%="posted " + a.created_at.to_s(:mdy) + " | " %>
+				<% if a.comment_count == 1 %>
+					<%= link_to "1 comment", article_path(a) %></td>
+				<% elsif a.comment_count == 0 %>
+					<%= link_to "discuss", article_path(a) %></td>
+				<% else %>
+					<%= link_to a.comment_count.to_s + " comments", article_path(a) %></td>
+			  	<% end %>
+			</tr>
 		<% end %>
 	</tbody>
 </table>
