DRYed up views with comment_head and article_head partial

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,7 @@
-<p>
-  	<h4>
-	<% if logged_in? %>
-		<%= button_to "^", upvote_article_path(@article) %><%= button_to "v", downvote_article_path(@article) %> 
-	<% end %>
-	<%= link_to @article.title, @article.link %> <%= "(" + @article.short_link + ")" %></h4>
-	<%= @article.points.to_s + " points by " %> <%= link_to @article.username, user_path(@article.user) %> <%="posted " + @article.created_at.to_s(:mdy) %>
-</p>
-	
+<%= render "article_head", :object => @article %>
 <%= render "comments/form"%>
 <%= render "comments/list", :object => @comments %><br />
 
 <%= link_to 'All Articles', articles_path %>
+
+
