comments always in ascending chrono order, cleaned comment_controller

--- a/app/views/comments/_list.html.erb
+++ b/app/views/comments/_list.html.erb
@@ -5,7 +5,7 @@
 		<%= comment.content %><br /><br />
 		<%= link_to "reply", comment_path(comment) %><br /><br />
 		<% if comment.comments.length != 0 %>
-			<%= render "comments/list", :object => comment.comments %>
+			<%= render "comments/list", :object => comment.comments.rev_chronological %>
 		<% end %>
 	</div>
 <% end %>
