readme and .blank? in comments/list

--- a/app/views/comments/_list.html.erb
+++ b/app/views/comments/_list.html.erb
@@ -2,7 +2,7 @@
 	<div class="well">
 		<%= render "comments/comment_head", :object => [comment, :link] %>
 		<%= link_to "reply", comment_path(comment) %><br /><br />
-		<% if comment.comments.length != 0 %>
+		<% if !comment.comments.blank? %>
 			<%= render "comments/list", :object => comment.comments.rev_chronological %>
 		<% end %>
 	</div>
