--- a/app/views/articles/_article_head.html.erb
+++ b/app/views/articles/_article_head.html.erb
@@ -1,6 +1,6 @@
 <% article = object %>
 <h4>
-<% if logged_in? %>
+<% if logged_in? && !current_user.voted_on(article) %>
 	<%= button_to "^", upvote_article_path(article) %><%= button_to "v", downvote_article_path(article) %> 
 <% end %>
 <%= link_to article.title, article.link %> <%= "(" + article.short_link + ")" %></h4>
