--- a/app/views/articles/_article_head.html.erb
+++ b/app/views/articles/_article_head.html.erb
@@ -6,10 +6,4 @@
 <%= link_to article.title, article.link %> <%= "(" + article.short_link + ")" %></h4>
 <%= article.points.to_s + " points by " %> <%= link_to article.username, user_path(article.user) %> <%="posted " + article.created_at.to_s(:mdy) %>
 <%= " | " %>
-<% if article.comment_count == 1 %>
-	<%= link_to "1 comment", article_path(article) %>
-<% elsif article.comment_count == 0 %>
-	<%= link_to "discuss", article_path(article) %>
-<% else %>
-	<%= link_to article.comment_count.to_s + " comments", article_path(article) %>
-<% end %>
+<%= link_to pluralize(article.comment_count, "comment"), article_path(article) %>
