--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing article</h1>
+<h1>Edit Article</h1>
 
-<%= render 'edit_form' %>
+<%= render 'form' %>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Cancel', @article %>
