--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,15 +1,7 @@
 <p class="supertiny">&nbsp;</p>
 <% if logged_in? %>
 	<h3>Add a Comment</h3>
-	<%= simple_form_for [@commentable, Comment.new], :html => { :class => 'form-horizontal' } do |f| %>
-		<fieldset>
-			<%= f.input :content %><br /><br />
-
-
-	      <%= f.submit "Add Comment", :class => 'btn btn-primary' %>
-
-	  </fieldset>
-	<% end %>
+	<%= render "comments/edit" %><br />
 <% else %>
 	To add comments, you must <%= link_to "log in", login_path %>.<br /><br />
 <% end %>
