change password link added and functional in user show page

--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -3,5 +3,6 @@
 	<%= f.input :email %><br />
   	<div class="actions">
 		<%= f.submit (@user.new_record? ? "Sign up" : "Update Info"), :class => 'btn' %>
+		<%= link_to "Change Password", change_password_path, :class => 'btn' %>
 	</div>
 <% end %>
